# virtual-midi-controller

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  setup-linux.sh  wscript
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build.yml  linux.yml  release.yml
data/: dmg-setup.applescript  virtual-midi-controller.desktop.in
deploy/macos/: setup.pkgproj
deploy/nsis/: setup.nsi
jucer/: VMC.jucer  Versicap.jucer
jucer/JuceLibraryCode/: AppConfig.h  JuceHeader.h
src/: Bindings.cpp  Bindings.h  Controller.cpp  Controller.h  Device.h  JuceHeader.h  LookAndFeel.h  LuaLib.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  Settings.cpp  Settings.h  VirtualKeyboard.h  bindings.cpp  bindings.hpp  controller.cpp  controller.hpp  device.cpp  device.hpp  engine.hpp  juce.hpp  lookandfeel.cpp  lookandfeel.hpp  lualib.cpp  main.cpp  maincomponent.cpp  maincomponent.hpp  midicceditor.cpp  midicceditor.hpp  settings.cpp  settings.hpp  unlock.hpp  virtualkeyboard.cpp  virtualkeyboard.hpp
src/compat/: JuceHeader.h
tools/jucer/: VMC.jucer
tools/jucer/JuceLibraryCode/: AppConfig.h  JuceHeader.h
tools/macdeploy/: Info.plist  appbundle.py  fancy.plist
tools/waf/: element.py  vmc.py
utils/: format.py  release-linux.sh
